fix embed spacing on section4

--- a/styles.css
+++ b/styles.css
@@ -949,6 +949,15 @@ h3 {
   gap: 60px;
 }
 
+.about-me-4-images {
+  max-width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
 .about-me-3-image {
   max-width: 45%;
   display: flex;
